--- a/Mask_RCNN/Prostate_evaluation_mode_post_processing.ipynb
+++ b/Mask_RCNN/Prostate_evaluation_mode_post_processing.ipynb
@@ -44,17 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import module from maskrcnn repo\n",
     "from config import Config\n",
@@ -65,7 +57,7 @@
     "import prostate\n",
     "import pydensecrf.densecrf as dcrf\n",
     "from pydensecrf.utils import compute_unary, create_pairwise_bilateral, \\\n",
-    "     create_pairwise_gaussian, softmax_to_unary\n",
+    "     create_pairwise_gaussian, unary_from_softmax\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -89,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +113,7 @@
       "MASK_POOL_SIZE                 14\n",
       "MASK_SHAPE                     [28, 28]\n",
       "MAX_GT_INSTANCES               100\n",
-      "MEAN_PIXEL                     [ 194.05923719  121.10764634  183.85822645]\n",
+      "MEAN_PIXEL                     [ 193.97800579  120.89113632  183.79060979]\n",
       "MINI_MASK_SHAPE                (56, 56)\n",
       "MODE                           16\n",
       "NAME                           prostate\n",
@@ -150,9 +142,10 @@
    ],
    "source": [
     "# Specify the dir that store the prostate dataset\n",
-    "dataset_dir = os.path.join(os.path.dirname(os.getcwd()), \"Data_Pre_Processing/cedars-224\")\n",
+    "# dataset_dir = os.path.join(os.path.dirname(os.getcwd()), \"Data_Pre_Processing/cedars-224\")\n",
+    "dataset_dir = os.path.join(\"/data/wenyuan/Mask-RCNN/Mask-RCNN-Path\", \"Data_Pre_Processing/cedars-224\")\n",
     "# We do 5-fold validation, specify which fold to be exclude for the current run\n",
-    "held_out_set = 2\n",
+    "held_out_set = 4\n",
     "# Featch the mean_pixel based on the training data (data exclude the held_out_set)\n",
     "mean_pixel = prostate.Mean_pixel(dataset_dir, held_out_set)\n",
     "# Configuration\n",
@@ -180,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180320T1313_held_out_set_1/mask_rcnn_prostate_0071.h5\n"
+      "Loading weights from  /scratch/wenyuan/Mask_RCNN_On_Pathology/Mask_RCNN/logs/prostate20180223T1554_held_out_set_4/mask_rcnn_prostate_0071.h5\n"
      ]
     }
    ],
@@ -207,7 +200,7 @@
     "    model_path = model.find_last()[1]\n",
     "else:\n",
     "    try:\n",
-    "        model_path = model.find_specific(epoch = epoch, held_out_set = 1)[1]\n",
+    "        model_path = model.find_specific(epoch = epoch, held_out_set = held_out_set)[1]\n",
     "    except:\n",
     "        model_path = model.find_specific(epoch = epoch)[1]\n",
     "\n",
@@ -226,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -248,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -261,8 +254,8 @@
     "    # move the probability axis to assure that the first dimension is the class dimension\n",
     "    prob_move = np.moveaxis(prob, 2, 0)\n",
     "    # The input should be the negative of the logarithm of probability values\n",
-    "    # Look up the definition of the softmax_to_unary for more information\n",
-    "    unary = softmax_to_unary(prob_move)\n",
+    "    # Look up the definition of the unary_from_softmax for more information\n",
+    "    unary = unary_from_softmax(prob_move)\n",
     "    # The inputs should be C-continious -- we are using Cython wrapper\n",
     "    unary = np.ascontiguousarray(unary)\n",
     "    d = dcrf.DenseCRF(img.shape[0] * img.shape[1], 4)\n",
@@ -280,126 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "/home/wenyuan/.conda/envs/maskrcnn/lib/python3.5/site-packages/pydensecrf/utils.py:79: RuntimeWarning: divide by zero encountered in log\n",
-      "  return -np.log(sm).reshape([num_cls, -1]).astype(np.float32)\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n",
-      "WARNING:root:pydensecrf.softmax_to_unary is deprecated, use unary_from_softmax instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize the confusion matrix\n",
     "C_MATRIX = np.zeros((4, 4))\n",
@@ -409,6 +285,7 @@
     "# Process display setting\n",
     "display_step = 10 # print out process for every display_step images\n",
     "total_image = len(val_list)\n",
+    "r_tumor_probs = []\n",
     "for Image_id in range(0, len(dataset_val.image_ids), evaluation_config.MODE):\n",
     "# for Image_id in range(576, 577):\n",
     "    image_whole = []\n",
@@ -437,10 +314,12 @@
     "        if np.argmax(r['tumor_probs']) == 1 and len(r['class_ids']) != 0:\n",
     "            det_sementic_mask = r['sementic_mask']\n",
     "            det_sementic_probs = r['prob_mask']\n",
+    "            r_tumor_probs.append(1)\n",
     "        else:\n",
     "            det_sementic_mask = np.zeros((image.shape[0], image.shape[1]))\n",
     "            det_sementic_probs = np.zeros((image.shape[0], image.shape[1], evaluation_config.NUM_CLASSES))\n",
     "            det_sementic_probs[:, :, 0] = 1\n",
+    "            r_tumor_probs.append(0)\n",
     "\n",
     "        det_mask_whole.append(det_sementic_mask[hv, wv])\n",
     "        det_probs_whole.append(det_sementic_probs[hv, wv])\n",
@@ -470,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -478,12 +357,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      " [[  4.47880610e+07   1.06823800e+06   4.09989500e+06   7.28478000e+05]\n",
-      " [  9.74532000e+05   8.72908800e+06   7.42293000e+05   2.13060000e+04]\n",
-      " [  2.75401700e+06   4.79897000e+05   3.46877060e+07   4.21070000e+04]\n",
-      " [  3.53799000e+05   2.34613000e+05   1.76299000e+05   7.07442300e+06]]\n",
-      " mIOU: 0.789262029297 \n",
-      " IOU for each class: [0.817792551064491, 0.71258053184959602, 0.80702464512414362, 0.8196503891484499] \n",
+      " [[ 45358315.   1697425.   3663320.    858362.]\n",
+      " [  1193875.  10930164.   1736414.    302055.]\n",
+      " [  2681236.    584861.  31089459.     83417.]\n",
+      " [   296534.    260562.    170666.   7096663.]]\n",
+      " mIOU: 0.756885952125 \n",
+      " IOU for each class: [0.81361567898526443, 0.65429099505571742, 0.77705439172965796, 0.78258274272933759] \n",
       " Below_th: False\n"
      ]
     }
@@ -498,17 +377,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import scipy.io\n",
-    "filename = \"Set%d_w_DNH_CRF\"%held_out_set\n",
-    "C_Matrix_dict = {filename:C_MATRIX}\n",
-    "file_path = filename + \".mat\"\n",
-    "scipy.io.savemat(file_path, C_Matrix_dict)"
+    "# import scipy.io\n",
+    "# filename = \"Set%d_w_DNH_CRF\"%held_out_set\n",
+    "# C_Matrix_dict = {filename:C_MATRIX}\n",
+    "# file_path = filename + \".mat\"\n",
+    "# scipy.io.savemat(file_path, C_Matrix_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1648"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(r_tumor_probs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tumor_indicator = []\n",
+    "for i in range(0, len(r_tumor_probs), evaluation_config.MODE):\n",
+    "    r = 1 if sum(r_tumor_probs[i : i + evaluation_config.MODE]) > 0 else 0\n",
+    "    Tumor_indicator.append(r)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"Set%d_ENH_RES.txt\"%held_out_set, Tumor_indicator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "103"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Tumor_indicator)"
    ]
   },
   {
@@ -522,6 +463,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -537,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
