modify data pre processing files

--- a/Data_Pre_Processing/image_ann_combine.ipynb
+++ b/Data_Pre_Processing/image_ann_combine.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"This ipynb helps show the effect to combine the patch back to the original pic\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -84,9 +93,9 @@
     "image_id = 318\n",
     "img = []\n",
     "ann = []\n",
-    "\n",
+    "data_path = '/data/wenyuan/Path_R_CNN/Data_Pre_Processing'\n",
     "for patch in range(16):\n",
-    "    dataset_dir = os.path.join(os.getcwd(), 'cedars-224')\n",
+    "    dataset_dir = os.path.join(data_path, 'cedars-224')\n",
     "    dataset = ProstateDataset(dataset_dir)\n",
     "    image = dataset.read_image(image_id, dir_name = '/tiles_16', patch_num = patch)\n",
     "    instance_mask, class_ids = dataset.read_instance_ann(image_id, dir_name = '/masks_instance_mod_16', \\\n",
@@ -95,23 +104,6 @@
     "    \n",
     "    img.append(image[150:450, 150:450, :])\n",
     "    ann.append(mask['ATmask'][150:450, 150:450])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16 (300, 300)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(ann), ann[0].shape)"
    ]
   },
   {
@@ -135,27 +127,6 @@
     "img = Image.fromarray(whole_image, \"RGB\")\n",
     "img.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "ann_decode = dataset.convert_mat_annotations_to_png(whole_ann)\n",
-    "dataset.show_ann_png(ann_decode)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
