modify data pre processing files

--- a/Data_Pre_Processing/semantic_2_instance.ipynb
+++ b/Data_Pre_Processing/semantic_2_instance.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"This ipynb file convert semantic mask of to instance mask\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {
     "collapsed": true
@@ -144,8 +153,7 @@
     "            if k <= num_classes:\n",
     "                pixels[j_,k_] = label_colours[int(k-1)]\n",
     "    outputs = np.array(img)\n",
-    "    return outputs\n",
-    "    "
+    "    return outputs"
    ]
   },
   {
@@ -174,8 +182,7 @@
     "            self.father[root_b] = root_a\n",
     "            \n",
     "    def set_father(self, pos, val):\n",
-    "        self.father[pos] = val\n",
-    "    \n"
+    "        self.father[pos] = val"
    ]
   },
   {
@@ -186,24 +193,9 @@
    },
    "outputs": [],
    "source": [
-    "mat_file_name = './cedars-224/masks/0000.mat'\n",
+    "data_path = '/data/wenyuan/Path_R_CNN/Data_Pre_Processing'\n",
+    "mat_file_name = os.path.join(data_path, 'cedars-224/masks/0000.mat')\n",
     "matfile = read_mat(mat_file_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# class_id = 4\n",
-    "# mask = (matfile == class_id)\n",
-    "# mask = mask.astype(int)\n",
-    "# outputs = convert_segmentation_array_to_png(mask, class_id)\n",
-    "# im = Image.fromarray(outputs)\n",
-    "# im.show()"
    ]
   },
   {
@@ -250,8 +242,7 @@
     "                for k in range(4):\n",
     "                    if (i + dr[k] >= 0 and i + dr[k] < r and\n",
     "                       j + dc[k] >= 0 and j + dc[k] < c and mask[i + dr[k], j + dc[k]] == mask[i, j]):\n",
-    "                        my_union.connect(i * c + j, (i + dr[k]) * c + j + dc[k])\n",
-    "print(np.unique(my_union.father))"
+    "                        my_union.connect(i * c + j, (i + dr[k]) * c + j + dc[k])"
    ]
   },
   {
@@ -268,12 +259,7 @@
     }
    ],
    "source": [
-    "res = my_union.father.reshape((r, c))\n",
-    "print(len(np.unique(res)), np.unique(res))\n",
-    "# seg = (res == 1102555).astype(int)\n",
-    "# outputs = convert_segmentation_array_to_png(seg, 0)\n",
-    "# im = Image.fromarray(outputs)\n",
-    "# im.show()"
+    "res = my_union.father.reshape((r, c))"
    ]
   },
   {
@@ -285,13 +271,6 @@
    "outputs": [],
    "source": [
     "unique_set = np.copy(np.unique(res))\n",
-    "# unique_len = len(unique_set)\n",
-    "# print()\n",
-    "# for i in range(unique_len):\n",
-    "#     index = np.argwhere(res == unique_set[i])\n",
-    "#     for ind in index:\n",
-    "#         res[ind[0], ind[1]] = i\n",
-    "\n",
     "class_ids = []\n",
     "hash_dict = {'4': 0, '1':1, '2':2, '3':3}\n",
     "for index, val in enumerate(unique_set):\n",
@@ -300,27 +279,7 @@
     "    else:\n",
     "        stack = np.dstack((stack, (res == val).astype(int)))\n",
     "    pos = np.argwhere(res == val)[0]\n",
-    "    class_ids.append(hash_dict[str(mask[pos[0], pos[1]])])\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1201, 1201, 6)\n",
-      "[0, 3, 3, 1, 1, 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(stack.shape)\n",
-    "print(class_ids)"
+    "    class_ids.append(hash_dict[str(mask[pos[0], pos[1]])])"
    ]
   },
   {
@@ -333,72 +292,8 @@
    "source": [
     "# save to mat file\n",
     "res_dict = {'segmentation': stack, 'class_ids': class_ids}\n",
-    "scipy.io.savemat('./cedars-224/masks/0000_instance.mat', res_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1201, 1201, 6) [0 3 3 1 1 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "instance = scipy.io.loadmat('./cedars-224/masks/0000_instance.mat', \n",
-    "                            mat_dtype=True, squeeze_me=True, struct_as_record=False)\n",
-    "print(instance['segmentation'].shape, instance['class_ids'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# visualize the segementation results\n",
-    "# for i in range(len(class_ids)):\n",
-    "#     outputs = convert_segmentation_array_to_png(stack[:,:,i], class_ids[i])\n",
-    "#     im = Image.fromarray(outputs)\n",
-    "#     im.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# # make a list of the class\n",
-    "# # to do adjust class number\n",
-    "# class_id = []\n",
-    "# for i in range(unique_len):\n",
-    "#     index = np.argwhere(res == i)[0]\n",
-    "#     class_id.append(mask[index[0], index[1]])\n",
-    "# print(class_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# seg = (res == 3).astype(int)\n",
-    "# outputs = convert_segmentation_array_to_png(seg, 0)\n",
-    "# im = Image.fromarray(outputs)\n",
-    "# im.show()"
+    "scipy.io.savemat(os.path.join(data_path, 'cedars-224/masks/0000_instance.mat'), \\\n",
+    "                 res_dict)"
    ]
   }
  ],
