--- a/Data_Pre_Processing/semantic_2_instance_16.ipynb
+++ b/Data_Pre_Processing/semantic_2_instance_16.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"This ipynb file convert using the whole pic semantic mask to create smaller pathces\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
@@ -36,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "def _crop_split_image(annotation_org, class_ids, \\\n",
+    "def _crop_split_image(annotation_org, class_ids, dataset_dir\\\n",
     "                                     height = 600, width = 600, \\\n",
     "                                     image_id = 0, save = False):\n",
     "        imgheight, imgwidth, _ = annotation_org.shape\n",
@@ -57,7 +66,8 @@
     "                if save:\n",
     "                    res_dict = {'segmentation': new_instance_mask, 'class_ids': new_class_ids}\n",
     "                    ann_filename = str(image_id).zfill(4) + '_' + str(current_image).zfill(4) + '_instance.mat'\n",
-    "                    scipy.io.savemat('./cedars-224/masks_instance_mod_16/' + \\\n",
+    "                    filepath = os.path.join(dataset_dir, 'masks_instance_mod_16/')\n",
+    "                    scipy.io.savemat(filepath + \\\n",
     "                                     ann_filename, res_dict)\n",
     "                    current_image += 1"
    ]
@@ -76,7 +86,8 @@
     }
    ],
    "source": [
-    "dataset_dir = os.path.join(os.getcwd(), 'cedars-224')\n",
+    "data_path = '/data/wenyuan/Path_R_CNN/Data_Pre_Processing'\n",
+    "dataset_dir = os.path.join(data_path, 'cedars-224')\n",
     "dataset = ProstateDataset(dataset_dir)\n",
     "\n",
     "start_id = 470\n",
@@ -89,19 +100,10 @@
     "        mask = np.expand_dims(mask, axis = -1)\n",
     "        class_ids = [class_ids]\n",
     "    mask = _ann_padding(mask)\n",
-    "    _crop_split_image(mask, class_ids, image_id = image_id, save = True)\n",
+    "    _crop_split_image(mask, class_ids, dataset_dir, image_id = image_id, save = True)\n",
     "    if image_id % display_step ==0:\n",
     "        print('Done converting image %d!' %image_id)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
